src/test/run-pass/dtor-explicit-mode.rs
struct Foo {
    x: int,
    drop { }
}

fn main() {}
